--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div class="card">
       <h3>eCommerce Systems & Integrations: Heavy Duty Parts Catalog Integration</h3>
       <p>
-        Semaless catalog ingestion integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
+        Seamless catalog ingestion integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
         <p>As Product Manager & Program Lead, I drove end-to-end heavy-duty parts catalog integration into CxCommerce using real-time APIs and AI-powered product matching, improving update speed by 30%, increasing conversion rates by 15%, cutting order errors by over 75%, and achieving full ROI within six months.</p>
       <p>KPIs</p>  
       <p>
@@ -234,12 +234,11 @@
          </p>
       
        <p> Repeatable, Scalable, Reusable (RSR)  & KPIs </p) 
-       <p>KPIs</p>
          <p>
          ✅SLA Compliance: 100% (Zero SLA breaches since March 7, 2024)
          ✅Average Resolution Time: Reduced from 35 days → under 5 days
-         ✅First Response Time (FRT): Reduced under 5 minuutes
-         ✅First Contact Resolution (FCR): Reduced under 5 minuutes
+         ✅First Response Time (FRT): Reduced under 5 minutes
+         ✅First Contact Resolution (FCR): Increased to 20X%
          ✅Escalation Rate: Reduced by 80%
        </p>
        <p><a href="https://avasudev18.github.io/PFolioAV.github.io/Mid-Market-CSM-Weekly-Review-Apri-20.pdf" target="_blank">Learn More...</a>
@@ -349,7 +348,7 @@
            <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
           🌐 3. Prototype</a>
            <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Mobile App.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-          🌐 4. G ardenApp (Beta)</a>
+          🌐 4. GardenApp (Beta)</a>
             <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SWOT.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
           🌐 5. SWOT</a>
            <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Strategy Roadmap.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
@@ -417,6 +416,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
