--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 <div class="card">
   <h2>Live Implementations</h2>
   <ul>
+  <p></p>Here are key platform capabilities and integrations I’ve led across eCommerce, ERP, and Field Service ecosystems, each tied to measurable business outcomes </p>
    <div class="cards-container">
       <div class="card">
         <h3>eCommerce Systems & Integrations: Customer Master Data Integration</h3>
@@ -250,6 +251,7 @@
 <div class="card">
   <h2>Case Studies</h2>
   <ul>
+  <p>Deep dives into specific customer transformations, showing how I translate strategy into results.</p>
     <div class="cards-container">
        <div class="card">
          <h3>Case Study 1: Driving 5x Revenue Growth Through Strategic Digital Transformation
@@ -292,6 +294,7 @@
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
     <ul>
+    <p>Experimentation space where I explore AI-driven workflows, prototypes, and new product ideas</p>
   <div class="cards-container">
      <div class="card">
         <h2>AI-Powered Agentic Workflow to Optimize Interview Preparation</h2>
@@ -416,6 +419,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
