--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
 <div class="card">
   <h2>Live Implementations</h2>
   <ul>
-  <p></p>Here are key platform capabilities and integrations I’ve led across eCommerce, ERP, and Field Service ecosystems, each tied to measurable business outcomes </p>
+  <p>
+  Led end-to-end product and program delivery for API-driven eCommerce, ERP, and Field Service platform integrations, including real-time data orchestration, middleware automation, cloud-native architecture, and bidirectional system synchronization—driving measurable improvements in revenue growth, CX performance, operational throughput, scalability, and platform reliability.
+  </p>
    <div class="cards-container">
       <div class="card">
         <h3>eCommerce Systems & Integrations: Customer Master Data Integration</h3>
@@ -419,6 +421,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
