--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
 <div class="card">
   <h2>Executive Leadership in Customer Success & Growth</h2>
   <ul>
+  <p>
+  Directed global Customer Success and Growth operations using data-driven renewal forecasting, expansion playbooks, voice-of-customer (VoC) analytics, automated onboarding workflows, and KPI-driven dashboards (NRR, GRR, CAC, LTV, CSAT, SLA)—accelerating revenue growth and reducing churn across mid-market and enterprise portfolios.
+  </p>
     <div class="cards-container">
        <div class="card">
          <h3>Executive Leadership in Customer Success & Growth</h3>
@@ -253,7 +256,9 @@
 <div class="card">
   <h2>Case Studies</h2>
   <ul>
-  <p>Deep dives into specific customer transformations, showing how I translate strategy into results.</p>
+  <p>
+  Translated executive growth strategy into scalable monetization execution across acquisition, expansion, and retention motions—leveraging cohort analysis, revenue intelligence, and performance dashboards to drive predictable revenue growth and margin expansion.
+  </p>
     <div class="cards-container">
        <div class="card">
          <h3>Case Study 1: Driving 5x Revenue Growth Through Strategic Digital Transformation
@@ -296,7 +301,7 @@
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
     <ul>
-    <p>Experimentation space where I explore AI-driven workflows, prototypes, and new product ideas</p>
+    <p>An innovation lab for designing, prototyping, and validating AI-driven workflows, agentic automation, and next-generation product concepts using LLMs, data pipelines, orchestration frameworks, and rapid experimentation methodologies.</p>
   <div class="cards-container">
      <div class="card">
         <h2>AI-Powered Agentic Workflow to Optimize Interview Preparation</h2>
@@ -421,6 +426,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
