--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
   <h2>Live Implementations</h2>
   <ul>
   <p>
-  Led end-to-end product and program delivery for API-driven eCommerce, ERP, and Field Service platform integrations, including real-time data orchestration, middleware automation, cloud-native architecture, and bidirectional system synchronization—driving measurable improvements in revenue growth, CX performance, operational throughput, scalability, and platform reliability.
+  <em>Led end-to-end product and program delivery for API-driven eCommerce, ERP, and Field Service platform integrations, including real-time data orchestration, middleware automation, cloud-native architecture, and bidirectional system synchronization—driving measurable improvements in revenue growth, CX performance, operational throughput, scalability, and platform reliability.
+  </em>
   </p>
    <div class="cards-container">
       <div class="card">
@@ -426,6 +427,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
