--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
   <h2>Executive Leadership in Customer Success & Growth</h2>
   <ul>
   <p>
-  Directed global Customer Success and Growth operations using data-driven renewal forecasting, expansion playbooks, voice-of-customer (VoC) analytics, automated onboarding workflows, and KPI-driven dashboards (NRR, GRR, CAC, LTV, CSAT, SLA)—accelerating revenue growth and reducing churn across mid-market and enterprise portfolios.
+  <em>Directed global Customer Success and Growth operations using data-driven renewal forecasting, expansion playbooks, voice-of-customer (VoC) analytics, automated onboarding workflows, and KPI-driven dashboards (NRR, GRR, CAC, LTV, CSAT, SLA)—accelerating revenue growth and reducing churn across mid-market and enterprise portfolios.
+  </em>
   </p>
     <div class="cards-container">
        <div class="card">
@@ -258,7 +259,8 @@
   <h2>Case Studies</h2>
   <ul>
   <p>
-  Translated executive growth strategy into scalable monetization execution across acquisition, expansion, and retention motions—leveraging cohort analysis, revenue intelligence, and performance dashboards to drive predictable revenue growth and margin expansion.
+  <em>Translated executive growth strategy into scalable monetization execution across acquisition, expansion, and retention motions—leveraging cohort analysis, revenue intelligence, and performance dashboards to drive predictable revenue growth and margin expansion.
+  </em>
   </p>
     <div class="cards-container">
        <div class="card">
@@ -302,8 +304,9 @@
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
     <ul>
-    <p>An innovation lab for designing, prototyping, and validating AI-driven workflows, agentic automation, and next-generation product concepts using LLMs, data pipelines, orchestration frameworks, and rapid experimentation methodologies.</p>
-  <div class="cards-container">
+    <p><em>An innovation lab for designing, prototyping, and validating AI-driven workflows, agentic automation, and next-generation product concepts using LLMs, data pipelines, orchestration frameworks, and rapid experimentation methodologies.</p>
+    </em>
+      <div class="cards-container">
      <div class="card">
         <h2>AI-Powered Agentic Workflow to Optimize Interview Preparation</h2>
          
@@ -427,6 +430,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
