--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 <div class="card">
   <h2>Live Implementations</h2>
   <ul>
-  <p>
-  <em>Led end-to-end product and program delivery for API-driven eCommerce, ERP, and Field Service platform integrations, including real-time data orchestration, middleware automation, cloud-native architecture, and bidirectional system synchronization—driving measurable improvements in revenue growth, CX performance, operational throughput, scalability, and platform reliability.
+  <p style="color: #1e40af;">
+    <em>Led end-to-end product and program delivery for API-driven eCommerce, ERP, and Field Service platform integrations, including real-time data orchestration, middleware automation, cloud-native architecture, and bidirectional system synchronization—driving measurable improvements in revenue growth, CX performance, operational throughput, scalability, and platform reliability.
   </em>
   </p>
    <div class="cards-container">
@@ -430,6 +430,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
