--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <div class="card">
   <h2>Executive Leadership in Customer Success & Growth</h2>
   <ul>
-  <p>
+  <p style="color: #1e40af;">
   <em>Directed global Customer Success and Growth operations using data-driven renewal forecasting, expansion playbooks, voice-of-customer (VoC) analytics, automated onboarding workflows, and KPI-driven dashboards (NRR, GRR, CAC, LTV, CSAT, SLA)—accelerating revenue growth and reducing churn across mid-market and enterprise portfolios.
   </em>
   </p>
@@ -258,7 +258,7 @@
 <div class="card">
   <h2>Case Studies</h2>
   <ul>
-  <p>
+  <p style="color: #1e40af;">
   <em>Translated executive growth strategy into scalable monetization execution across acquisition, expansion, and retention motions—leveraging cohort analysis, revenue intelligence, and performance dashboards to drive predictable revenue growth and margin expansion.
   </em>
   </p>
@@ -304,7 +304,8 @@
 <div class="card">
     <h2>Thought Leadership & Innovation Lab</h2>
     <ul>
-    <p><em>An innovation lab for designing, prototyping, and validating AI-driven workflows, agentic automation, and next-generation product concepts using LLMs, data pipelines, orchestration frameworks, and rapid experimentation methodologies.</p>
+    <p style="color: #1e40af;">
+    <em>An innovation lab for designing, prototyping, and validating AI-driven workflows, agentic automation, and next-generation product concepts using LLMs, data pipelines, orchestration frameworks, and rapid experimentation methodologies.</p>
     </em>
       <div class="cards-container">
      <div class="card">
@@ -430,6 +431,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
