--- a/index.html
+++ b/index.html
@@ -343,6 +343,333 @@
          <br>
          </p>
        </div>
+  <!-----------A1C App -------------->
+    <div class="card">
+         <h2>A1C Predictive Trend Model</h2>
+          <p>
+<!-- ===================== A1C Predictive Trend Model – Product Case Study ===================== -->
+<section id="a1c-case-study" class="case-study">
+  <div class="cs-card">
+    <header class="cs-header">
+      <h2>A1C Predictive Trend Model</h2>
+      <p class="cs-subtitle">Behavior-Driven Health Analytics • Living Dashboard • Interpretable Model</p>
+
+      <div class="cs-tags">
+        <span class="tag">Product Analytics</span>
+        <span class="tag">Feature Engineering</span>
+        <span class="tag">Forecasting</span>
+        <span class="tag">Behavior Design</span>
+      </div>
+    </header>
+
+    <div class="cs-grid">
+      <article class="cs-block">
+        <h3>Problem</h3>
+        <p>
+          HbA1C is a lagging indicator (updates every 2–3 months). Users trying to lower A1C via lifestyle changes
+          lack real-time feedback, receive conflicting “healthy eating” advice, and often lose confidence or over-restrict.
+        </p>
+        <ul>
+          <li>No immediate signal linking daily meals to A1C outcomes</li>
+          <li>Generic guidance fails to explain derailment patterns</li>
+          <li>Low adherence due to uncertainty and delayed results</li>
+        </ul>
+      </article>
+
+      <article class="cs-block">
+        <h3>Hypothesis</h3>
+        <p>
+          If we model A1C as a function of behavioral patterns (not individual foods),
+          we can forecast trends before labs, identify high-leverage actions, and improve adherence via interpretability.
+        </p>
+        <ul>
+          <li>Weekly averages matter more than perfect days</li>
+          <li>Dinner behavior disproportionately impacts fasting glucose and A1C</li>
+          <li>Fiber quality, timing, and pairing modulate insulin response</li>
+        </ul>
+      </article>
+
+      <article class="cs-block cs-block--wide">
+        <h3>Model</h3>
+        <div class="cs-pipeline">
+          <div class="pipe-step">
+            <div class="pipe-title">1) Inputs</div>
+            <div class="pipe-text">Daily food + portions + exercise (plain text)</div>
+          </div>
+          <div class="pipe-step">
+            <div class="pipe-title">2) Feature Extraction</div>
+            <div class="pipe-text">Carbs, timing, stacking, exercise, pairing, fiber</div>
+          </div>
+          <div class="pipe-step">
+            <div class="pipe-title">3) A1C Proxy</div>
+            <div class="pipe-text">Interpretable weighted linear model</div>
+          </div>
+          <div class="pipe-step">
+            <div class="pipe-title">4) Weekly Avg</div>
+            <div class="pipe-text">7-day smoothing (biological realism)</div>
+          </div>
+          <div class="pipe-step">
+            <div class="pipe-title">5) Forecast</div>
+            <div class="pipe-text">Projected curve + confidence band</div>
+          </div>
+        </div>
+
+        <div class="cs-math">
+          <div class="math-row">
+            <span class="math-label">Projected A1C:</span>
+            <code class="math-code">A1C_projected(t) = 6.40 − 0.065t</code>
+            <span class="math-note">(t = weeks since start)</span>
+          </div>
+          <div class="math-row">
+            <span class="math-label">Actual proxy:</span>
+            <code class="math-code">A1C_proxy = α + Σ(wᵢXᵢ)</code>
+            <span class="math-note">(interpretable behavioral features)</span>
+          </div>
+          <div class="math-row">
+            <span class="math-label">Weekly avg:</span>
+            <code class="math-code">A1C_weekly = mean(last 7 days)</code>
+          </div>
+          <div class="math-row">
+            <span class="math-label">Confidence band:</span>
+            <code class="math-code">Best = Projected − 0.08 • Worst = Projected + 0.12</code>
+          </div>
+        </div>
+
+        <h4 class="cs-minihead">Feature Weighting (100%)</h4>
+        <div class="cs-table-wrap">
+          <table class="cs-table">
+            <thead>
+              <tr>
+                <th>Feature</th>
+                <th>Weight</th>
+                <th>Why it matters</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Dinner carbohydrate load</td>
+                <td><strong>25%</strong></td>
+                <td>Strongest lever via overnight glucose → fasting glucose → A1C</td>
+              </tr>
+              <tr>
+                <td>Weekly average daily carbs (7-day)</td>
+                <td><strong>20%</strong></td>
+                <td>A1C responds to averages, not single days</td>
+              </tr>
+              <tr>
+                <td>Carb stacking events</td>
+                <td><strong>15%</strong></td>
+                <td>Prolonged glucose exposure (e.g., rice+beans, dosa+channa)</td>
+              </tr>
+              <tr>
+                <td>Meal spikes &gt; 45g</td>
+                <td><strong>12%</strong></td>
+                <td>Large excursions drive disproportionate glycation</td>
+              </tr>
+              <tr>
+                <td>Exercise (timing &amp; frequency)</td>
+                <td><strong>8%</strong></td>
+                <td>Improves insulin sensitivity; blunts spikes</td>
+              </tr>
+              <tr>
+                <td>Protein + fat pairing</td>
+                <td><strong>6%</strong></td>
+                <td>Flattens insulin curve; reduces peak + duration</td>
+              </tr>
+              <tr>
+                <td>Fiber Score (quality)</td>
+                <td><strong>6%</strong></td>
+                <td>Non-starchy veg/avocado/seeds reduce glucose velocity</td>
+              </tr>
+              <tr>
+                <td>Carb timing (day vs night)</td>
+                <td><strong>4%</strong></td>
+                <td>Late carbs elevate overnight glucose risk</td>
+              </tr>
+              <tr>
+                <td>Liquid carbs (milk/tea/shakes)</td>
+                <td><strong>3%</strong></td>
+                <td>Acts as a carb multiplier on borderline days</td>
+              </tr>
+              <tr>
+                <td>Recovery behavior</td>
+                <td><strong>1%</strong></td>
+                <td>Low-carb follow-ups prevent weekly derailment</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="cs-callout">
+          <strong>Key product insight:</strong>
+          Dinner control + weekly average account for <strong>45%</strong> of model impact, enabling minimal, high-leverage behavior changes.
+        </div>
+      </article>
+
+      <article class="cs-block">
+        <h3>Outcome</h3>
+        <ul>
+          <li>Stable, downward A1C trend with weekly averages remaining inside the confidence band</li>
+          <li>Early forecasting of crossing A1C 6.0 by mid-January (trend-based)</li>
+          <li>Reduced anxiety and improved adherence through interpretable “danger zone” alerts</li>
+        </ul>
+      </article>
+
+      <article class="cs-block">
+        <h3>Learnings</h3>
+        <ul>
+          <li>Interpretability beats complexity for sustained behavior change</li>
+          <li>Weekly averages are the right KPI; daily noise is not actionable</li>
+          <li>Fiber quality (veg/avocado/seeds) outperforms “whole grains” for glucose stability</li>
+          <li>Protein must be paired with fat to reduce insulin spike duration</li>
+          <li>Small, repeatable rules prevent derailment better than strict restriction</li>
+        </ul>
+      </article>
+    </div>
+  </div>
+</section>
+
+<style>
+  :root{
+    --cs-primary:#1e40af;         /* your preferred blue */
+    --cs-text:#0f172a;
+    --cs-muted:#475569;
+    --cs-border:#e2e8f0;
+    --cs-bg:#ffffff;
+    --cs-chip:#eff6ff;
+    --cs-shadow:0 10px 25px rgba(2,6,23,.08);
+  }
+  .case-study{padding:24px 0;}
+  .cs-card{
+    background:var(--cs-bg);
+    border:1px solid var(--cs-border);
+    border-radius:18px;
+    box-shadow:var(--cs-shadow);
+    padding:22px;
+  }
+  .cs-header h2{
+    margin:0;
+    color:var(--cs-text);
+    font-size:1.6rem;
+    letter-spacing:-.02em;
+  }
+  .cs-subtitle{
+    margin:6px 0 10px;
+    color:var(--cs-muted);
+    font-size:1rem;
+  }
+  .cs-tags{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px;}
+  .tag{
+    font-size:.85rem;
+    padding:6px 10px;
+    border-radius:999px;
+    background:var(--cs-chip);
+    color:var(--cs-primary);
+    border:1px solid rgba(30,64,175,.18);
+  }
+
+  .cs-grid{
+    display:grid;
+    grid-template-columns:repeat(12,1fr);
+    gap:16px;
+    margin-top:16px;
+  }
+  .cs-block{
+    grid-column:span 6;
+    border:1px solid var(--cs-border);
+    border-radius:16px;
+    padding:16px;
+    background:#fff;
+  }
+  .cs-block--wide{grid-column:span 12;}
+  .cs-block h3{
+    margin:0 0 8px;
+    color:var(--cs-primary);
+    font-size:1.15rem;
+  }
+  .cs-block p{margin:0 0 10px;color:var(--cs-text);line-height:1.55;}
+  .cs-block ul{margin:0;padding-left:18px;color:var(--cs-text);line-height:1.55;}
+  .cs-block li{margin:6px 0;}
+
+  .cs-minihead{
+    margin:16px 0 10px;
+    color:var(--cs-text);
+    font-size:1rem;
+  }
+
+  .cs-pipeline{
+    display:grid;
+    grid-template-columns:repeat(5,1fr);
+    gap:10px;
+    margin:10px 0 14px;
+  }
+  .pipe-step{
+    border:1px dashed rgba(30,64,175,.35);
+    border-radius:14px;
+    padding:10px;
+    background:rgba(239,246,255,.55);
+  }
+  .pipe-title{font-weight:700;color:var(--cs-primary);font-size:.92rem;margin-bottom:4px;}
+  .pipe-text{color:var(--cs-text);font-size:.9rem;line-height:1.35;}
+
+  .cs-math{
+    border:1px solid var(--cs-border);
+    border-radius:14px;
+    padding:12px;
+    background:#fafafa;
+    margin:10px 0 12px;
+  }
+  .math-row{display:flex;flex-wrap:wrap;gap:8px;align-items:center;margin:6px 0;}
+  .math-label{font-weight:700;color:var(--cs-text);}
+  .math-code{
+    background:#fff;
+    border:1px solid var(--cs-border);
+    border-radius:10px;
+    padding:6px 8px;
+    font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size:.92rem;
+  }
+  .math-note{color:var(--cs-muted);font-size:.9rem;}
+
+  .cs-table-wrap{overflow:auto;border-radius:14px;border:1px solid var(--cs-border);}
+  .cs-table{
+    width:100%;
+    border-collapse:collapse;
+    min-width:760px;
+    background:#fff;
+  }
+  .cs-table th, .cs-table td{
+    padding:10px 12px;
+    border-bottom:1px solid var(--cs-border);
+    vertical-align:top;
+    text-align:left;
+  }
+  .cs-table th{
+    color:var(--cs-text);
+    background:rgba(239,246,255,.6);
+    font-weight:700;
+  }
+  .cs-table td{color:var(--cs-text);}
+  .cs-callout{
+    margin-top:12px;
+    padding:12px 14px;
+    border-radius:14px;
+    border:1px solid rgba(30,64,175,.22);
+    background:rgba(239,246,255,.7);
+    color:var(--cs-text);
+    line-height:1.55;
+  }
+
+  @media (max-width: 980px){
+    .cs-block{grid-column:span 12;}
+    .cs-pipeline{grid-template-columns:1fr; }
+    .cs-table{min-width:640px;}
+  }
+</style>
+<!-- ===================== /A1C Predictive Trend Model – Product Case Study ===================== -->
+
+    </div>
+  <!--------------------------A1C end-------->
      <div class="card">
          <h2>Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
          <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" target="_blank">
@@ -431,6 +758,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
