--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <div class="cs-pipeline">
           <div class="pipe-step">
             <div class="pipe-title">1) Inputs</div>
-            <div class="pipe-text">Daily food + portions + exercise (plain text)</div>
+            <div class="pipe-text">Daily food + portions + exercise (plain text, Photo, Audio)</div>
           </div>
           <div class="pipe-step">
             <div class="pipe-title">2) Feature Extraction</div>
@@ -758,6 +758,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
