--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <div class="cs-card">
     <header class="cs-header">
       <h2>A1C Predictive Trend Model</h2>
-      <p class="cs-subtitle">Behavior-Driven Health Analytics • Living Dashboard • Interpretable Model</p>
+      <p class="cs-subtitle accent-blue">Behavior-Driven Health Analytics • Living Dashboard • Interpretable Model</p>
 
       <div class="cs-tags">
         <span class="tag">Product Analytics</span>
@@ -758,6 +758,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
