--- a/index.html
+++ b/index.html
@@ -525,6 +525,22 @@
           <li>Small, repeatable rules prevent derailment better than strict restriction</li>
         </ul>
       </article>
+
+      <article class="cs-block">
+        <h3>Outputs</h3>
+        <ul>
+          <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Graph.png" target="_blank">
+          <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/Graph.png"
+          alt="A1C ActualvsProjectedGraph"
+          style="width:700px; height:auto; border-radius:40px; margin-bottom:20px;" />
+          </a>
+          <li>full visualization of your Actual vs Projected A1C trend across the entire time duration, rendered end-to-end with confidence bands</li>
+          <li>🔵 Actual A1C (Weekly Avg)</li>
+          <li>🟠 Projected A1C</li>
+          <li>🔷 Confidence Band</li>
+        </ul>
+      </article>
+      
     </div>
   </div>
 </section>
@@ -758,6 +774,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
