--- a/index.html
+++ b/index.html
@@ -769,12 +769,10 @@
   </div>
 <!---========== Additional Documents ==========================-->
   <div class="card">
-     <h2>Additional Documents</h2>
+     <h2>Supporting Artifacts</h2>
         <p>
-        I am a strategic product executive who builds intelligent, scalable solutions at the intersection of AI, Field Service, Digital Commerce, and Cloud SaaS. Over the past 15+ years, I’ve guided global teams and complex enterprise programs across Oracle, HP, and high-growth SaaS environments—earning a reputation for transforming ambiguity into strategy, and strategy into measurable business outcomes.
+        A curated collection of working documents, strategy frameworks, and analytical artifacts created across product management, customer success, and platform integrations. These materials reflect my hands-on approach to decision-making, stakeholder alignment, and delivering measurable business value.
         <p>
-        My work sits at the core of how organizations operate. I’ve led the design and delivery of cloud-native products that streamline field service operations, modernize B2B eCommerce, and integrate seamlessly with ERP ecosystems such as Infor, Karmak, SAP, and DST. I understand how data, workflow automation, and customer experience come together to create meaningful competitive advantage.
-      <p>
         <a href="https://avasudev18.github.io/PFolioAV.github.io/Customer-Journey-Map.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
        🌐 User Journey Maps</a>
       </p>
@@ -786,6 +784,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
