--- a/index.html
+++ b/index.html
@@ -775,6 +775,10 @@
         <p>
         <a href="https://avasudev18.github.io/PFolioAV.github.io/Customer-Journey-Map.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
        🌐 User Journey Maps</a>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/feature/infor_aws_arch.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 Infor Design Architecture</a>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/feature/B2B_multi_regional_soln_arch.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+       🌐 B2B Multi Region Architecture</a>
       </p>
     </div>    
   </section>
@@ -784,6 +788,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
