--- a/index9.html
+++ b/index9.html
@@ -2,116 +2,199 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anil Vasudevakurup - Product Manager Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Anil Vasudevakurup | Product & AI Leader</title>
+
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
-    :root {
-      --primary-color: #003366;
-      --secondary-color: #f5f7fa;
-      --accent-color: #007bff;
-      --text-color: #333;
-      --card-bg: #ffffff;
-    }
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--secondary-color);
-      color: var(--text-color);
-    }
-    header {
-      background-color: var(--primary-color);
-      color: white;
-      padding: 50px 20px;
-      text-align: center;
-      background-image: url('https://avasudev18.github.io/PFolioAV.github.io/Desert.png?blur=30');
-      background-size: cover;
-      background-position: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 40px;
-    }
-    header p {
-      font-size: 16px;
-    }
-    section {
-      max-width: 1100px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    .card {
-      background: var(--card-bg);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      border-radius: 16px;
-      padding: 30px;
-      margin-bottom: 30px;
-      transition: 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-    }
-    h2 {
-      color: var(--primary-color);
-      margin-top: 0;
-    }
-    a {
-      color: var(--accent-color);
-      text-decoration: none;
-      font-weight: 500;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 12px;
-      padding: 10px 20px;
-      background-color: var(--accent-color);
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      margin-right: 10px;
-    }
-    img.profile-pic {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 20px;
-    }
-    footer {
-      background: var(--primary-color);
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
+    body { scroll-behavior: smooth; }
   </style>
 </head>
-<body>
-  <header>
-    <h1>Anil Vasudevakurup</h1>
-    <p>Product Management Leader | SaaS | eCommerce | Field Service | AI Strategy</p>
-    <p>
-      📍 Denver, CO |
-      <a href="mailto:anilvasudev2001@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank">LinkedIn</a>
+
+<body class="bg-slate-50 text-slate-800">
+
+<!-- ================= HERO ================= -->
+<header class="relative bg-cover bg-center" style="background-image:url('Desert.png');">
+  <div class="absolute inset-0 bg-slate-900/75"></div>
+
+  <div class="relative max-w-6xl mx-auto px-6 py-24 text-center text-white">
+    <h1 class="text-4xl md:text-5xl font-bold tracking-tight">
+      Anil Vasudevakurup
+    </h1>
+    <p class="mt-4 text-lg md:text-xl text-slate-200">
+      Director of Product Management • AI • SaaS • Field Service • ERP
     </p>
-  </header>
-  <section>
-    <div class="card">
-      <img src="https://avasudev18.github.io/PFolioAV.github.io/LinkedIn Photo.jpg" alt="Anil Vasudev" class="profile-pic" />
-      <h2>About Me</h2>
-      <p>
-        Strategic Product Leader with a track record of driving innovation across Field Service, eCommerce, and Cloud platforms for B2B SaaS and enterprise organizations. Expert in orchestrating ERP-cloud integrations (AWS, Azure), managing full product lifecycles, and turning complex technical ecosystems into high-performing, secure, and scalable solutions.
-      </p>
-      <a href="https://avasudev18.github.io/PFolioAV.github.io/Anil.Vasudev_mst04272025.pdf" target="_blank" class="btn">View Resume</a>
-      <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" class="btn">View Product Portfolio</a>
+
+    <div class="mt-8 flex justify-center gap-4">
+      <a href="AnilVasudevakurup_PM_CSM_122025.pdf"
+         class="px-6 py-3 rounded-lg bg-blue-600 hover:bg-blue-700 font-semibold">
+        Download Resume
+      </a>
+      <a href="https://linkedin.com/in/anil-vasudevakurup"
+         target="_blank"
+         class="px-6 py-3 rounded-lg border border-slate-300 hover:bg-slate-800">
+        LinkedIn
+      </a>
     </div>
-  </section>
-  <footer>
-    &copy; 2025 Anil Vasudevakurup — Built with passion for technology and customer success
-  </footer>
+  </div>
+</header>
+
+<!-- ================= METRICS ================= -->
+<section class="bg-blue-700 text-white">
+  <div class="max-w-6xl mx-auto px-6 py-6 grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+    <div><p class="text-2xl font-bold">15+</p><p>Years Experience</p></div>
+    <div><p class="text-2xl font-bold">40%</p><p>Efficiency Gains</p></div>
+    <div><p class="text-2xl font-bold">20%</p><p>Revenue Growth</p></div>
+    <div><p class="text-2xl font-bold">80%+</p><p>Retention</p></div>
+  </div>
+</section>
+
+<!-- ================= ABOUT ================= -->
+<section class="max-w-6xl mx-auto px-6 py-16">
+  <div class="bg-white rounded-xl shadow p-8 grid md:grid-cols-[180px_1fr] gap-8">
+    <img src="LinkedIn Photo.jpg"
+         class="w-44 h-44 rounded-full object-cover mx-auto"
+         alt="Anil Vasudevakurup"/>
+
+    <div>
+      <h2 class="text-2xl font-bold text-blue-700">About Me</h2>
+      <p class="mt-4">
+        Strategic product executive building AI-driven, scalable platforms across
+        Field Service, Digital Commerce, and ERP ecosystems.
+      </p>
+
+      <ul class="mt-4 space-y-2 list-disc list-inside">
+        <li>Enterprise SaaS & API-first architecture</li>
+        <li>Oracle Field Service & AI automation</li>
+        <li>Customer Success as a growth engine</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- ================= CORE EXPERTISE ================= -->
+<section class="max-w-6xl mx-auto px-6 pb-16">
+  <h2 class="text-2xl font-bold text-blue-700 mb-6">Core Expertise</h2>
+
+  <div class="grid md:grid-cols-3 gap-6">
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold text-lg">Product Leadership</h3>
+      <p class="mt-2 text-sm">Roadmaps, GTM, prioritization, exec alignment</p>
+    </div>
+
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold text-lg">AI & Machine Learning</h3>
+      <p class="mt-2 text-sm">Agentic workflows, RAG, recommendations</p>
+    </div>
+
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold text-lg">Enterprise Systems</h3>
+      <p class="mt-2 text-sm">Oracle, Infor, Karmak, SAP, DST</p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= LIVE IMPLEMENTATIONS ================= -->
+<section class="max-w-6xl mx-auto px-6 pb-16">
+  <h2 class="text-2xl font-bold text-blue-700 mb-6">Live Implementations</h2>
+
+  <div class="grid md:grid-cols-2 gap-6">
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold">Customer Master Data Integration</h3>
+      <ul class="mt-3 text-sm space-y-1 list-disc list-inside">
+        <li>99% data discrepancy reduction</li>
+        <li>50% faster order processing</li>
+        <li>20% fewer support tickets</li>
+      </ul>
+    </div>
+
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold">Heavy Duty Parts Catalog Integration</h3>
+      <ul class="mt-3 text-sm space-y-1 list-disc list-inside">
+        <li>30% faster updates</li>
+        <li>15% conversion lift</li>
+        <li>ROI in 6 months</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- ================= CASE STUDIES ================= -->
+<section class="bg-slate-100 py-16">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-2xl font-bold text-blue-700 mb-6">Featured Case Studies</h2>
+
+    <div class="bg-white p-8 rounded-xl shadow">
+      <h3 class="font-semibold text-xl">
+        5× Revenue Growth via Digital Commerce Transformation
+      </h3>
+      <p class="mt-4 text-sm">
+        Led B2B commerce transformation delivering 5× online sales growth,
+        68% employee adoption, and 9× search volume increase.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= INNOVATION LAB ================= -->
+<section class="max-w-6xl mx-auto px-6 py-16">
+  <h2 class="text-2xl font-bold text-blue-700 mb-6">
+    Thought Leadership & Innovation Lab
+  </h2>
+
+  <div class="grid md:grid-cols-2 gap-6">
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold">AI Agentic Interview Workflow</h3>
+      <p class="mt-3 text-sm">
+        Multi-agent workflow for job detection, role analysis,
+        STAR stories, and mock interviews.
+      </p>
+    </div>
+
+    <div class="bg-white p-6 rounded-xl shadow">
+      <h3 class="font-semibold">A1C Predictive Trend Model</h3>
+      <p class="mt-3 text-sm">
+        Behavior-driven forecasting model with interpretable confidence bands
+        and weekly trend smoothing.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= CREDENTIALS ================= -->
+<section class="bg-slate-900 text-slate-200 py-16">
+  <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+    <div>
+      <h3 class="font-semibold text-lg">Experience</h3>
+      <p class="mt-3 text-sm">
+        Oracle • Accenture • PhaseZero<br/>
+        15+ years global product leadership
+      </p>
+    </div>
+
+    <div>
+      <h3 class="font-semibold text-lg">Certifications</h3>
+      <p class="mt-3 text-sm">
+        OCI AI • Vector Search • GenAI • Cloud Architecture
+      </p>
+    </div>
+
+    <div>
+      <h3 class="font-semibold text-lg">Education</h3>
+      <p class="mt-3 text-sm">
+        MS Information Science<br/>
+        MS Physics
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer class="bg-black text-slate-400 text-center py-6 text-sm">
+  © 2025 Anil Vasudevakurup • Built with product thinking
+</footer>
+
 </body>
 </html>
