--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
                         Executive Summary
                     </h2>
                     <div class="space-y-5 text-slate-600 text-lg leading-relaxed">
+                       <p>
+                       I am a strategic product executive with 15+ years of experience building intelligent, scalable products across AI-driven automation, Field Service, Digital Commerce, and Cloud SaaS. I have led global teams and complex enterprise initiatives within Oracle, HP, and high-growth SaaS environments, consistently translating ambiguity into clear product strategy and delivering measurable business impact.
+                       </p>
+                        <p>
+                        My leadership focuses on products that sit at the operational core of organizations. I have driven the design and delivery of cloud-native platforms that modernize B2B eCommerce, optimize field service operations, and integrate deeply with ERP ecosystems including Infor, Karmak, SAP, and DST. I bring a systems-level understanding of how data, workflow automation, and customer experience intersect to create durable competitive advantage.
+                        </p>
+                        <p>
+                        With deep hands-on expertise in Oracle Field Service (OFS/OFSC), AI-enabled automation, and AWS/Azure cloud architectures, I specialize in simplifying complex technical landscapes into intuitive, high-performing products. My teams have delivered 40% operational efficiency gains, double-digit revenue growth, and customer retention exceeding 80%, driven by disciplined execution, customer-centric design, and alignment with business strategy.
+                        </p>
+                        <p>
+                        I am known for building clarity and momentum across engineering, design, sales, and customer success, leading with empathy, analytical rigor, and a strong bias for action. I believe the strongest product organizations are those that align people, platforms, and priorities around outcomes-not outputs.
+                        </p>
+                        <p>
+                        At my core, I am motivated by creating products that do more than solve problems—they scale organizations, empower users, and deliver long-term value. That mindset shapes how I lead teams, partner with stakeholders, and build products that last. 
+                        </p>
+                        
                         <p>I am a strategic product executive who builds intelligent, scalable solutions at the intersection of AI, Field Service, Digital Commerce, and Cloud SaaS. Over the past 15+ years, I’ve guided global teams and complex enterprise programs across Oracle, HP, and high-growth SaaS environments—earning a reputation for transforming ambiguity into strategy, and strategy into measurable business outcomes.</p>
                         <p>My work sits at the core of how organizations operate. I’ve led the design and delivery of cloud-native products that streamline field service operations, modernize B2B eCommerce, and integrate seamlessly with ERP ecosystems such as Infor, Karmak, SAP, and DST. I understand how data, workflow automation, and customer experience come together to create meaningful competitive advantage.</p>
                         <p>With hands-on expertise in Oracle Field Service (OFS/OFSC), AI-driven automation, and AWS/Azure integration, I specialize in turning complex operational and technical landscapes into intuitive, high-performing products. My teams and I have delivered results that matter—40% efficiency improvements, double-digit revenue acceleration, and retention rates above 80% by staying grounded in customer needs and aligned with business strategy.</p>
