--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
                     </h2>
                     <div class="space-y-5 text-slate-600 text-lg leading-relaxed">
                        <p>
-                       I am a strategic product executive with 15+ years of experience building intelligent, scalable products across AI-driven automation, Field Service, Digital Commerce, and Cloud SaaS. I have led global teams and complex enterprise initiatives within Oracle, HP, and high-growth SaaS environments, consistently translating ambiguity into clear product strategy and delivering measurable business impact.
+                       I am a strategic product executive with 15+ years of experience building intelligent, scalable products across <b>AI-driven automation, Field Service, Digital Commerce, and Cloud SaaS</b>. I have led global teams and complex enterprise initiatives within <b>Oracle, HP, and high-growth SaaS environments</b>, consistently translating ambiguity into clear product strategy and delivering measurable business impact.
                        </p>
                         <p>
-                        My leadership focuses on products that sit at the operational core of organizations. I have driven the design and delivery of cloud-native platforms that modernize B2B eCommerce, optimize field service operations, and integrate deeply with ERP ecosystems including Infor, Karmak, SAP, and DST. I bring a systems-level understanding of how data, workflow automation, and customer experience intersect to create durable competitive advantage.
+                        My leadership focuses on products that sit at the operational core of organizations. I have driven the design and delivery of <b>cloud-native platforms</b> that modernize <b>B2B eCommerce</b>, optimize <b>field service operations</b>, and integrate deeply with <b>ERP ecosystems including Infor, Karmak, and DST</b>. I bring a systems-level understanding of how data, workflow automation, and customer experience intersect to create durable competitive advantage.
                         </p>
                         <p>
-                        With deep hands-on expertise in Oracle Field Service (OFS/OFSC), AI-enabled automation, and AWS/Azure cloud architectures, I specialize in simplifying complex technical landscapes into intuitive, high-performing products. My teams have delivered 40% operational efficiency gains, double-digit revenue growth, and customer retention exceeding 80%, driven by disciplined execution, customer-centric design, and alignment with business strategy.
+                        With deep hands-on expertise in <b>Oracle Field Service (OFS/OFSC), AI-enabled automation, and AWS/Azure cloud architectures</b>, I specialize in simplifying complex technical landscapes into intuitive, high-performing products. My teams have delivered <b>40% operational efficiency gains, double-digit revenue growth, and customer retention exceeding 80%</b>, driven by disciplined execution, customer-centric design, and alignment with business strategy.
                         </p>
                         <p>
-                        I am known for building clarity and momentum across engineering, design, sales, and customer success, leading with empathy, analytical rigor, and a strong bias for action. I believe the strongest product organizations are those that align people, platforms, and priorities around outcomes-not outputs.
+                        I am known for building clarity and momentum across <b></b>engineering, design, sales, and customer success</b>, leading with empathy, analytical rigor, and a strong bias for action. I believe the strongest product organizations are those that align people, platforms, and priorities around outcomes-not outputs.
                         </p>
                         <p>
-                        At my core, I am motivated by creating products that do more than solve problems—they scale organizations, empower users, and deliver long-term value. That mindset shapes how I lead teams, partner with stakeholders, and build products that last. 
+                        At my core, I am motivated by creating products that do more than solve problems—they <b>scale organizations, empower users, and deliver long-term value</b>. That mindset shapes how I lead teams, partner with stakeholders, and build products that last. 
                         </p>
                       
                     </div>
