--- a/index.html
+++ b/index.html
@@ -303,6 +303,22 @@
                     <a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/Driving-5x-Revenue-Growth-Through-Strategic-Digital-Transformation.pdf" target="_blank" class="inline-flex items-center gap-2 text-blue-600 font-extrabold hover:underline text-lg">Read Case Study PDF <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg></a>
                 </div>
             </div>
+
+            <div class="bg-white p-8 md:p-10 rounded-3xl border border-slate-200 shadow-sm flex flex-col md:flex-row gap-10 items-center">
+                <div class="flex-1">
+                    <span class="inline-block px-3 py-1 bg-blue-100 text-blue-700 text-xs font-black uppercase tracking-widest rounded-full mb-4">Case Study #2</span>
+                    <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">ACME Digital Transformation Journe</h3>
+                    <p class="text-slate-600 text-lg mb-8 leading-relaxed">ACME's transformation strategy centers on Oracle Fusion Cloud Applications, a comprehensive suite that replaces fragmented legacy systems with 
+                        an integrated, intelligent platform. This modern architecture eliminates data silos while providing the scalability and flexibility necessary to support future growth and innovation initiatives.</p>
+                        <p>This strategic initiative delivered exceptional results: 30% IT Cost Reduction, 40% Scheduling Efficiency, and 15% Customer Satisfaction Lift.</p>
+                    <div class="flex flex-wrap gap-3 mb-8">
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🚀 5X Sales Growth</span>
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">👥 68% Adoption</span>
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🔍 9X Search Vol</span>
+                    </div>
+                    <a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/Driving-5x-Revenue-Growth-Through-Strategic-Digital-Transformation.pdf" target="_blank" class="inline-flex items-center gap-2 text-blue-600 font-extrabold hover:underline text-lg">Read Case Study PDF <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg></a>
+                </div>
+           </div>
         </section>
 
         <section id="innovation" class="mb-20 scroll-mt-24">
