--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                     <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">ACME Digital Transformation Journe</h3>
                     <p class="text-slate-600 text-lg mb-8 leading-relaxed">ACME's transformation strategy centers on Oracle Fusion Cloud Applications, a comprehensive suite that replaces fragmented legacy systems with 
                         an integrated, intelligent platform. This modern architecture eliminates data silos while providing the scalability and flexibility necessary to support future growth and innovation initiatives.</p>
-                        <p>This strategic initiative delivered exceptional results: 30% IT Cost Reduction, 40% Scheduling Efficiency, and 15% Customer Satisfaction Lift.</p>
+                        <p>This strategic initiative delivered exceptional results.</p>
                     <div class="flex flex-wrap gap-3 mb-8">
-                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🚀 5X Sales Growth</span>
-                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">👥 68% Adoption</span>
-                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🔍 9X Search Vol</span>
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🚀 30% IT Cost Reduction</span>
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">👥 40% Scheduling Efficiency</span>
+                        <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🔍 915% Customer Satisfaction Lift</span>
                     </div>
                     <a href="https://avasudev18.github.io/PFolioAV.github.io/Casestudy/ACME-Digital-Transformation-Journey.pdf" target="_blank" class="inline-flex items-center gap-2 text-blue-600 font-extrabold hover:underline text-lg">Read Case Study PDF <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg></a>
                 </div>
