--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="bg-white p-8 md:p-10 rounded-3xl border border-slate-200 shadow-sm flex flex-col md:flex-row gap-10 items-center">
                 <div class="flex-1">
                     <span class="inline-block px-3 py-1 bg-blue-100 text-blue-700 text-xs font-black uppercase tracking-widest rounded-full mb-4">Case Study #2</span>
-                    <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">ACME Digital Transformation Journe</h3>
+                    <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">ACME Digital Transformation Journey</h3>
                     <p class="text-slate-600 text-lg mb-8 leading-relaxed">ACME's transformation strategy centers on Oracle Fusion Cloud Applications, a comprehensive suite that replaces fragmented legacy systems with 
                         an integrated, intelligent platform. This modern architecture eliminates data silos while providing the scalability and flexibility necessary to support future growth and innovation initiatives.</p>
                         <p>This strategic initiative delivered exceptional results.</p>
