--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                     <div class="flex flex-col lg:flex-row gap-12">
                         <div class="lg:w-1/2">
                             <p class="text-slate-600 text-lg mb-8 leading-relaxed">This multi-agent system inspects candidate job applications, detects invitations, and automatically prepares personalized interview readiness materials for each specific role.</p>
+                            <p>Tools Used: <b>Chat GPT 5.2, crewAi, Streamlit App </b></p>
                             <div class="grid grid-cols-2 gap-4">
                                 <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 text-xs font-bold text-slate-700 flex items-center gap-2">
                                     <span class="w-6 h-6 bg-blue-600 text-white rounded-full flex items-center justify-center text-[10px]">1</span> Job Intake
@@ -383,6 +384,7 @@
                         <div class="bg-slate-50 p-6 rounded-2xl border border-slate-100">
                             <h3 class="text-blue-800 font-bold mb-3 text-sm uppercase tracking-wider">Solution Hypothesis</h3>
                             <p class="text-sm text-slate-600 leading-relaxed">Modeling A1C as a function of behavioral patterns allows forecasting trends before labs and identifies high-leverage actions like dinner control.</p>
+                            <p>Tools Used: <b>Chat GPT 5.2</b></p>
                         </div>
                     </div>
 
@@ -434,6 +436,7 @@
                     <div class="md:w-2/3">
                         <h3 class="text-3xl font-bold text-slate-900 mb-6 leading-tight text-emerald-900">Reimagining the Future: SmartGardener AI Innovation</h3>
                         <p class="text-slate-600 text-lg mb-8 leading-relaxed">Strategically incorporated generative AI tools at each stage of development to accelerate ideation, improve feature design, and elevate user experience for home gardeners.</p>
+                        <p>Tool Used: <b>Hostinger(Vibe Coding)</b> </p>
                         <div class="grid grid-cols-2 lg:grid-cols-3 gap-3">
                             <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" class="px-4 py-3 bg-emerald-50 hover:bg-emerald-100 text-emerald-700 text-xs font-bold rounded-xl transition-all border border-emerald-100 text-center">Design Document</a>
                             <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp_Wire.png" target="_blank" class="px-4 py-3 bg-emerald-50 hover:bg-emerald-100 text-emerald-700 text-xs font-bold rounded-xl transition-all border border-emerald-100 text-center">Wireframes</a>
