--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <div class="flex flex-col lg:flex-row gap-12">
                         <div class="lg:w-1/2">
                             <p class="text-slate-600 text-lg mb-8 leading-relaxed">This multi-agent system inspects candidate job applications, detects invitations, and automatically prepares personalized interview readiness materials for each specific role.</p>
-                            <p>Tools Used: <b>Chat GPT 5.2, crewAi, Streamlit App </b></p>
+                            <p>Tools Used: <b>Chat GPT 5.2, crewai, Streamlit App </b></p>
                             <div class="grid grid-cols-2 gap-4">
                                 <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 text-xs font-bold text-slate-700 flex items-center gap-2">
                                     <span class="w-6 h-6 bg-blue-600 text-white rounded-full flex items-center justify-center text-[10px]">1</span> Job Intake
