--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
             <h2 class="text-white text-2xl font-bold mb-8 tracking-tight italic">Transforming ambiguity into strategy, and strategy into business outcomes.</h2>
             <div class="flex justify-center gap-10 mb-10">
                 <a href="https://www.linkedin.com/in/anil-vasudevakurup/" target="_blank" class="text-slate-400 hover:text-blue-400 transition-colors text-sm font-bold uppercase tracking-widest">LinkedIn</a>
+                <a href="https://www.kaggle.com/code/anilvasudev24/flexpriceagent-av" target="_blank" class="text-slate-400 hover:text-blue-400 transition-colors text-sm font-bold uppercase tracking-widest">kaggle</a>
                 <a href="mailto:anilvasudev2001@gmail.com" class="text-slate-400 hover:text-blue-400 transition-colors text-sm font-bold uppercase tracking-widest">Email Contact</a>
             </div>
             <p class="text-slate-600 text-[10px] uppercase font-bold tracking-[0.3em]">&copy; 2025 Anil Vasudevakurup — Denver, Colorado</p>
