Fix spelling errors and enhance case study formatting
Corrected spelling of 'Industry' in case studies and emphasized it with strong tags.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="flex-1">
                     <span class="inline-block px-3 py-1 bg-blue-100 text-blue-700 text-xs font-black uppercase tracking-widest rounded-full mb-4">Case Study #1</span>
                     <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">Driving 5x Revenue Growth Through Strategic Digital Transformation</h3>
-                    <p class="text-slate-600 text-lg mb-8 leading-relaxed"><p> Indisdutry: e-commerce</p>Led Summit Commercial Vehicles' B2B e-commerce transformation. This strategic initiative delivered exceptional results: 5x online sales growth, 68% increase in employee adoption, and 9x growth in platform searches—demonstrating measurable impact in customer experience optimization.</p>
+                    <p class="text-slate-600 text-lg mb-8 leading-relaxed"><p><strong>Indusdutry: e-commerce</strong></p>Led Summit Commercial Vehicles' B2B e-commerce transformation. This strategic initiative delivered exceptional results: 5x online sales growth, 68% increase in employee adoption, and 9x growth in platform searches—demonstrating measurable impact in customer experience optimization.</p>
                     <div class="flex flex-wrap gap-3 mb-8">
                         <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">🚀 5X Sales Growth</span>
                         <span class="bg-slate-100 text-slate-700 px-4 py-2 rounded-lg text-sm font-bold">👥 68% Adoption</span>
@@ -308,7 +308,7 @@
                 <div class="flex-1">
                     <span class="inline-block px-3 py-1 bg-blue-100 text-blue-700 text-xs font-black uppercase tracking-widest rounded-full mb-4">Case Study #2</span>
                     <h3 class="text-3xl font-bold text-slate-900 mb-5 leading-tight">ACME Digital Transformation Journey</h3>
-                    <p class="text-slate-600 text-lg mb-8 leading-relaxed"><p> Indisdutry: Edible Oil / Food Supply Distribution Industry</p> ACME's transformation strategy centers on Oracle Fusion Cloud Applications, a comprehensive suite that replaces fragmented legacy systems with 
+                    <p class="text-slate-600 text-lg mb-8 leading-relaxed"><p><strong>Indusdutry: Edible Oil / Food Supply Distribution Industry</strong></p> ACME's transformation strategy centers on Oracle Fusion Cloud Applications, a comprehensive suite that replaces fragmented legacy systems with 
                         an integrated, intelligent platform. This modern architecture eliminates data silos while providing the scalability and flexibility necessary to support future growth and innovation initiatives.</p>
                         <p>This strategic initiative delivered exceptional results.</p>
                     <div class="flex flex-wrap gap-3 mb-8">
